# opennms-api-wrapper

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MERMAID.md  README.md  SECURITY.md  TODO.md  mkdocs.yml  pyproject.toml  smoke_test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  index.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-29-mypy-fixes.md  2026-04-30-release-v0.4.6.md
opennms_api_wrapper/: __init__.py  _acks.py  _alarm_history.py  _alarm_stats.py  _alarms.py  _applications.py  _asset_suggestions.py  _availability.py  _base.py  _business_services.py  _categories.py  _classifications.py  _config_mgmt.py  _device_config.py  _discovery.py  _email_nbi.py  _enlinkd.py  _eventconf.py  _events.py  _exceptions.py  _flows.py  _foreign_sources.py  _foreign_sources_config.py  _graphs.py  _groups.py  _health.py  _heatmap.py  _ifservices.py  _info.py  _ipinterfaces_v2.py  _javamail_config.py  _ksc_reports.py  _maps.py  _measurements.py  _metadata.py  _minions.py  _monitoring_locations.py  _monitoring_systems.py  _nodes.py  _notifications.py  (+21 more)
tests/: conftest.py  fixtures.py  test_acks.py  test_alarm_history.py  test_alarm_stats.py  test_alarms.py  test_applications.py  test_asset_suggestions.py  test_availability.py  test_business_services.py  test_business_services_ext.py  test_categories.py  test_classifications.py  test_config_mgmt.py  test_device_config.py  test_discovery.py  test_email_nbi.py  test_enlinkd.py  test_eventconf.py  test_events.py  test_exceptions.py  test_flows.py  test_flows_dscp.py  test_foreign_sources.py  test_foreign_sources_config.py  test_graphs.py  test_graphs_prefab.py  test_groups.py  test_health.py  test_heatmap.py  test_ifservices.py  test_info.py  test_ipinterfaces_v2.py  test_javamail_config.py  test_ksc_reports.py  test_maps.py  test_measurements.py  test_metadata.py  test_minions.py  test_monitoring_locations.py  (+23 more)
