[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opennms-api-wrapper"
version = "0.1.0"
description = "A thin Python wrapper for the OpenNMS REST API (Horizon 35)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = 'Richard "Chance" Newkirk', email = "chance.newkirk+github@pm.me" },
]
license = { file = "LICENSE" }
keywords = ["opennms", "network-management", "rest", "api", "wrapper", "nms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[project.urls]
Homepage = "https://github.com/cnewkirk/opennms-api-wrapper"
Repository = "https://github.com/cnewkirk/opennms-api-wrapper"
"Bug Tracker" = "https://github.com/cnewkirk/opennms-api-wrapper/issues"
Changelog = "https://github.com/cnewkirk/opennms-api-wrapper/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["opennms_api_wrapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
